--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.1",
     "formik": "^2.2.9",
+    "framer-motion": "^10.12.12",
     "next": "13.4.1",
     "next-auth": "^4.22.1",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-notifications": "^1.7.4",
     "swiper": "^9.3.1",
     "swr": "^2.1.5",
     "tailwindcss": "3.3.2",
