--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "prisma generate && next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "stripe:listen": "stripe listen --forward-to localhost:3000/api/stripe/webhook"
   },
   "prisma": {
     "seed": "ts-node prisma/seed.ts"
@@ -14,22 +15,35 @@
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.6",
     "@prisma/client": "^4.14.0",
+    "@stripe/react-stripe-js": "^2.1.0",
+    "@stripe/stripe-js": "^1.54.0",
+    "@types/formidable": "^2.0.6",
     "@types/node": "20.1.2",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
+    "classnames": "^2.3.2",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.1",
+    "express-handlebars": "^7.0.7",
+    "formidable": "^2.1.1",
     "formik": "^2.2.9",
     "framer-motion": "^10.12.12",
+    "micro": "^10.0.1",
+    "mongodb": "^5.6.0",
     "next": "13.4.1",
     "next-auth": "^4.22.1",
+    "nodemailer": "^6.9.3",
+    "nodemailer-express-handlebars": "^6.1.0",
     "postcss": "8.4.23",
+    "raw-body": "^2.5.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-notifications": "^1.7.4",
+    "shortid": "^2.2.16",
+    "stripe": "^12.8.0",
     "swiper": "^9.3.1",
     "swr": "^2.1.5",
     "tailwindcss": "3.3.2",
@@ -38,6 +52,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/nodemailer": "^6.4.8",
     "prisma": "^4.14.0",
     "sass": "^1.62.1"
   }
