formik issue removed

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,13 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts",
+    "src/app/(main)/account/layout.jsx"
+  ],
   "exclude": ["node_modules"],
   "typeRoots": ["../node_modules/@types", "../@types"]
 }
