--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@stripe/react-stripe-js": "^2.1.0",
     "@stripe/stripe-js": "^1.54.0",
     "@types/formidable": "^2.0.6",
+    "@types/lodash.debounce": "^4.0.7",
     "@types/node": "20.1.2",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
@@ -31,6 +32,8 @@
     "formidable": "^2.1.1",
     "formik": "^2.2.9",
     "framer-motion": "^10.12.12",
+    "lodash": "^4.17.21",
+    "lodash.debounce": "^4.0.8",
     "micro": "^10.0.1",
     "mongodb": "^5.6.0",
     "next": "13.4.1",
@@ -48,7 +51,8 @@
     "swr": "^2.1.5",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4",
-    "yup": "^1.1.1"
+    "yup": "^1.1.1",
+    "zud": "^0.0.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
