--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-notifications": "^1.7.4",
+    "react-select": "^5.7.4",
     "shortid": "^2.2.16",
     "stripe": "^12.8.0",
     "swiper": "^9.3.1",
