--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "postcss": "8.4.23",
     "raw-body": "^2.5.2",
     "react": "18.2.0",
+    "react-chat-elements": "^12.0.10",
     "react-dom": "18.2.0",
     "react-notifications": "^1.7.4",
     "react-select": "^5.7.4",
